# TFM_Data_Science

./: .gitattributes  README.md  app.py  pyproject.toml  requirements.txt
app/: app.py  cluster.csv  madrid_distritos_geo.json
app/.streamlit/: config.toml
data/final/: clusters.csv  tendencias.csv  (+2 more)
models/: cluster_models.pkl  embeddings_autoencoder.pth  rf_final.pkl.bz2  umap.pkl.bz2
notebooks/: CLUSTERING.ipynb  CLUSTERING_EMBEDDING_FINAL.ipynb  Calculos_IAV.ipynb  EDA_autoinvestor.ipynb  EDA_datos_demograficos.ipynb  EDA_viviendas_2011_2024.ipynb  clustering-embedding.ipynb  gráficas_desviacion_tipica.ipynb  merge_autoinvestor_demograficos.ipynb  preprocesamiento_modelado.ipynb  preprocesamiento_modelado_Gaspar.ipynb  preprocesamiento_modelado_ag.ipynb  unificacion_+_variables.ipynb  unificacion_embeddings.ipynb
reports/: report.html  report_autoinvestor.html  report_demograficos.html  report_merge.html  reporte_datos_demograficos_ine.html  reporte_gentrificacion_madrid.html  reporte_renta_media.html  reporte_venta_alquiler.html
src/: DATASET_Unificado.ipynb  EDA_autoinvestor.py  EDA_datos_demograficos.py  Unificacion_datos_AG.ipynb  copy_xd.py  limpieza_datos_demograficos_ine.py  limpieza_renta_media.py  limpieza_venta_alquiler.py  unificacion_datos.py  unificacion_datos_TEMP.py  unificacion_datos_gentrificacion.py  unificacion_datos_idealista_2025.py  unificacion_datos_vivienda.py  unificacion_embeddings.py  unificacion_gentrificacion_idealista.py  unificacion_var_extra_idealista.py
utils/: calculos.py  cleaning.py  extra_var.py  visualizacion.py
(+1050 files in other folders)
