[project]
name = "tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==25.3.0",
    "beautifulsoup4==4.13.3",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "h11==0.14.0",
    "hdbscan>=0.8.40",
    "idna==3.10",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "optuna>=4.5.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas>=2.3.1",
    "pydeck>=0.9.1",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "seaborn>=0.13.2",
    "selenium==4.29.0",
    "setuptools==80.9.0",
    "skrub>=0.6.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.12.2",
    "umap-learn>=0.5.9.post2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.3.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wordcloud>=1.9.4",
    "wsproto==1.2.0",
]
